Fixed Photo Issue

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <p>I build scalable applications and automate workflows with modern DevOps practices. Passionate about Cloud, CI/CD, and Containers.</p>
     </div>
     <div class="photo">
-      <img src="Rahmatround.jpg" alt="Your Photo">
+      <img src="Rahmat.jpg" alt="Your Photo">
     </div>
   </section>
 
