Fixed Contact Links

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
     <h2>Contact</h2>
     <p>Feel free to connect with me:</p>
     <div class="contact">
-      <a href="mailto:rahmat@example.com">📧 rahmat@example.com</a>
-      <a href="https://github.com/rahmat">💻 GitHub</a>
-      <a href="https://linkedin.com/in/rahmat">🔗 LinkedIn</a>
+      <a href="mailto:rahmatkhan9020@gmail.com">📧 rahmatkhan9020@gmail.com</a>
+      <a href="https://github.com/rahmatkhan1">💻 GitHub</a>
+      <a href="https://linkedin.com/in/rahmat-khan">🔗 LinkedIn</a>
     </div>
   </section>
 
