Added New Changes

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   <section class="hero">
     <div class="content">
       <h2>Hi, I'm Rahmat 👋</h2>
-      <div class="role">Software Developer | DevOps Engineer</div>
+      <div class="role">Software Developer | Aspiring DevOps Engineer</div>
       <p>I build scalable applications and automate workflows with modern DevOps practices. Passionate about Cloud, CI/CD, and Containers.</p>
     </div>
     <div class="photo">
@@ -194,11 +194,11 @@
       </div>
       <div class="card">
         <h3>DevOps</h3>
-        <p>Linux, Docker, Kubernetes, Ansible, Terraform</p>
+        <p>Linux, GitHub Action, Kubernetes, Jenkins, Ansible, Terraform</p>
       </div>
       <div class="card">
         <h3>Cloud</h3>
-        <p>AWS, Azure, GCP</p>
+        <p>AWS</p>
       </div>
     </div>
   </section>
@@ -227,12 +227,12 @@
   <section id="experience">
     <h2>Experience</h2>
     <div class="card">
-      <h3>Software Developer | Digital Logistics Company</h3>
+      <h3>Software Developer | Analyst Delivery @ Airo Digital Labs</h3>
       <p>Worked on backend systems, optimized processes, and collaborated with the DevOps team to improve CI/CD workflows.</p>
     </div>
 
     <div class="card">
-      <h3>Full Stack Web Developer | Freelance</h3>
+      <h3>Full Stack Web Developer | MERN Stack @ Maskan Tech</h3>
       <p>Developed responsive web applications using HTML, CSS, JavaScript, and backend APIs. Integrated cloud and DevOps practices for smooth deployment and scalability.</p>
     </div>
   </section>
