Added 1 word change

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
       <div class="card">
         <h3>DevOps</h3>
-        <p>Linux, GitHub Action, Kubernetes, Jenkins, Ansible, Terraform</p>
+        <p>Linux, GitHub, GitHub Actions, Kubernetes, Jenkins, Ansible, Terraform</p>
       </div>
       <div class="card">
         <h3>Cloud</h3>
